--- a/index.html
+++ b/index.html
@@ -34,32 +34,40 @@
 		</div>
 	</div>
 	<!-- end #header -->
-    <div class="weather">
-        <div id="ml_5102c652">
-            <div class="weather_d1" id="ml_5102c652_i" v='1.1'
-                a='{"t":"a","lang":"en","ids":[],"a_bg":"#554842","a_br_c":"#E53935","a_n_b":"#E53935",
-                "a_icon":"#FFFFFF00","a_con":"#E53935","a_inter":"#FFFFFF00","a_n_c":"#FFFFFF",
-                "a_icon_color":"#FFFFFF","a_con_c":"#FFFFFF","a_int_h_color":"#FFFFFF","a_int_temp_color":"#FFFFFF",
-                "p_cr":4}'>
+    <div class="wrapper-page">
+        <div class="weather">
+            <div id="ml_5102c652">
+                <div class="weather_d1" id="ml_5102c652_i" v='1.1'
+                    a='{"t":"a","lang":"en","ids":[],"a_bg":"#554842","a_br_c":"#E53935","a_n_b":"#E53935",
+                    "a_icon":"#FFFFFF00","a_con":"#E53935","a_inter":"#FFFFFF00","a_n_c":"#FFFFFF",
+                    "a_icon_color":"#FFFFFF","a_con_c":"#FFFFFF","a_int_h_color":"#FFFFFF","a_int_temp_color":"#FFFFFF",
+                    "p_cr":4}'>
+                </div>
+                <div id="ml_5102c652_c" class="weather_d2">
+                    <img src="https://meteolabs.kz/assets/img/logo_z_b.svg" class="weather_img">
+                    <a href="https://weatherlabs.in/almaty/today/"
+                        class="weather_a" target="_blank" id="ml_5102c652_u">
+                        Weather Today
+                    </a>
+                </div>
             </div>
-            <div id="ml_5102c652_c" class="weather_d2">
-                <img src="https://meteolabs.kz/assets/img/logo_z_b.svg" class="weather_img">
-                <a href="https://weatherlabs.in/almaty/today/"
-                    class="weather_a" target="_blank" id="ml_5102c652_u">
-                    Weather Today
-                </a>
+            <script async src="https://app.meteolabs.kz/js/?id=ml_5102c652"></script>
+        </div>
+        <div id="page" class="news">
+            <div class="weeklynewsmain">
+                <span class="weeklynews">Новости</span>
+                <script type="text/javascript"
+                    src="http://weekly-news.ru/informer.htm?theme=world&num=10&width=&css=&font=Arial&bgcolor=&bsize=0&bcol=DDDDDD&tcol=000000&tsize=16&lcol=0000C0&lsize=13&dcol=333333&dsize=12&img=1&desc=1">
+                </script>
+                источник: <a class="weeklynewsm" target="_blank" href="http://weekly-news.ru/">weekly-news.ru</a>
+            </div>
+            <div id="page-bgtop">
+                <div id="page-bgbtm">
+                    <div>&nbsp;</div>
+                </div>
             </div>
         </div>
-        <script async src="https://app.meteolabs.kz/js/?id=ml_5102c652"></script>
     </div>
-    <div id="page" class="news">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga provident veniam repudiandae obcaecati odio suscipit quos recusandae commodi, ab natus soluta deserunt esse, aut cumque, hic quibusdam saepe sint modi?
-		<div id="page-bgtop">
-			<div id="page-bgbtm">
-				<div>&nbsp;</div>
-			</div>
-		</div>
-	</div>
 	<!-- end #page -->
 </div>
 <div id="footer">
